# aoc2025

./: .ghcid  .gitignore  aoc2025.cabal  fourmolu.yaml
src/aoc2025/: AOC.hs  Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs
src/aoc2025-exe/: Main.hs
